Then Run Process: Fixed issue with running commands on UNIX-like systems